# CourseProject

./: .clang-format  .gitignore  .gitmodules  ActivationFunction.cpp  ActivationFunction.h  Adam.cpp  Adam.h  AnyLayer.h  CMakeLists.txt  Cache.h  DataLoader.cpp  DataLoader.h  Except.cpp  Except.h  LinearLayer.cpp  LinearLayer.h  LossFunction.cpp  LossFunction.h  MNISTLoader.cpp  MNISTLoader.h  NeuralNetwork.cpp  NeuralNetwork.h  NonLinearLayer.cpp  NonLinearLayer.h  Optimizer.cpp  Optimizer.h  Random.cpp  Random.h  SGD.cpp  SGD.h  SGDOptimizer.h  Test.cpp  Test.h  Train.cpp  Train.h  main.cpp  neunet.h
